tests/reference/asr-continue_compilation_2-a6145a1.stderr
syntax error: End module name does not match module name
  --> tests/errors/continue_compilation_2.f90:23:1 - 25:28
   |
23 |    module my_module
   |    ^^^^^^^^^^^^^^^^...
...
   |
25 |    end module wrong_module_name
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

syntax error: End subroutine name does not match subroutine name
  --> tests/errors/continue_compilation_2.f90:44:5 - 46:33
   |
44 |        subroutine my_subroutine1()
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
46 |        end subroutine different_name
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

syntax error: End function name does not match function name
  --> tests/errors/continue_compilation_2.f90:48:5 - 51:32
   |
48 |        function my_function() result(res)
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
51 |        end function not_my_function
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

syntax error: End subroutine name does not match subroutine name
  --> tests/errors/continue_compilation_2.f90:53:5 - 55:33
   |
53 |        subroutine my_subroutine2()
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
55 |        end subroutine different_name 
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

syntax error: End module name does not match module name
  --> tests/errors/continue_compilation_2.f90:27:1 - 57:37
   |
27 |    module continue_compilation_2_mod
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
57 |    end module continue_compilation_1_mod
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

syntax error: Invalid syntax for variable initialization (try inserting '::' after the type)
  --> tests/errors/continue_compilation_2.f90:76:5
   |
76 |     integer init_x = 1
   |     ^^^^^^^^^^^^^^^^^^ 

syntax error: kind 16 is not supported yet.
   --> tests/errors/continue_compilation_2.f90:166:5
    |
166 |     real*16 :: unsupported_kind
    |     ^^^^^^^ 

tokenizer error: Token '?' is not recognized
   --> tests/errors/continue_compilation_2.f90:397:17
    |
397 |     integer  :: ? tokenizer_error
    |                 ^ token not recognized

tokenizer error: Token '@' is not recognized in `format` statement
 --> tests/errors/continue_compilation_2.f90:1:2
  |
1 | ! If you need a function, put it into the module below and remove the same
  |  ^ 

semantic error: Duplicate DIMENSION attribute specified
  --> tests/errors/continue_compilation_2.f90:32:24
   |
32 |         common /rowns/ rowns(209)
   |                        ^^^^^^^^^^ 

semantic error: Implicit typing is not allowed, enable it by using --implicit-typing 
  --> tests/errors/continue_compilation_2.f90:70:5 - 73:49
   |
70 |        implicit real(a-z)
   |        ^^^^^^^^^^^^^^^^^^...
...
   |
73 |        ! Put declarations below without empty lines
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: `parameter` attribute conflicts with `pointer` attribute
  --> tests/errors/continue_compilation_2.f90:74:5
   |
74 |     integer, pointer, parameter :: v => null()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: `parameter` attribute conflicts with `allocatable` attribute
  --> tests/errors/continue_compilation_2.f90:75:5
   |
75 |     integer, allocatable, parameter :: v=1
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: `kind` argument of `int` intrinsic must be a scalar
   --> tests/errors/continue_compilation_2.f90:137:54
    |
137 |     integer(8), parameter :: ar1(3) = int([1, 2, 3], [8, 8, 8])
    |                                                      ^^^^^^^^^ 

semantic error: `kind` argument of `int` intrinsic must be a scalar
   --> tests/errors/continue_compilation_2.f90:138:54
    |
138 |     integer(8), parameter :: ar2(3) = int([1, 2, 3], [8, 8, 8])
    |                                                      ^^^^^^^^^ 

semantic error: Only Integer literals or expressions which reduce to constant Integer are accepted as kind parameters
   --> tests/errors/continue_compilation_2.f90:140:13
    |
140 |     integer(4.2) :: ifoix
    |             ^^^ 

semantic error: Kind 6 is not supported for Complex
   --> tests/errors/continue_compilation_2.f90:142:13
    |
142 |     complex(6) :: iiocx
    |             ^ 

semantic error: Kind 3 is not supported for Integer
   --> tests/errors/continue_compilation_2.f90:144:13
    |
144 |     integer(3) :: iifix
    |             ^ 

semantic error: Kind 10 is not supported for Logical
   --> tests/errors/continue_compilation_2.f90:146:13
    |
146 |     logical(10) :: iiolx
    |             ^^ 

semantic error: Expected initialization expression for kind
   --> tests/errors/continue_compilation_2.f90:148:13
    |
148 |     complex(*) :: ksoca
    |             ^ 

semantic error: Expected initialization expression for kind
   --> tests/errors/continue_compilation_2.f90:150:13
    |
150 |     integer(*) :: ksoia
    |             ^ 

semantic error: Expected initialization expression for kind
   --> tests/errors/continue_compilation_2.f90:152:13
    |
152 |     logical(*) :: ksola
    |             ^ 

semantic error: Only Integer literals or expressions which reduce to constant Integer are accepted as kind parameters
   --> tests/errors/continue_compilation_2.f90:154:13
    |
154 |     integer('a') :: ksoix
    |             ^^^ 

semantic error: Parameter 'kvoia' is a variable, which does not reduce to a constant expression
   --> tests/errors/continue_compilation_2.f90:157:10
    |
157 |     real(kvoia) :: kvoix
    |          ^^^^^ 

semantic error: Symbol is already declared in the same scope
   --> tests/errors/continue_compilation_2.f90:159:16
    |
159 |     real(3) :: x
    |                ^ redeclaration
    |
 84 |     integer, parameter :: x = 2
    |                           ~~~~~ original declaration

semantic error: Expected initialization expression for kind
   --> tests/errors/continue_compilation_2.f90:161:10
    |
161 |     real(*) kind2_a
    |          ^ 

semantic error: Parameter attribute cannot be used with Target attribute
   --> tests/errors/continue_compilation_2.f90:163:5
    |
163 |     integer, parameter, target :: foo=4
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Kind 16 is not supported for Real
   --> tests/errors/continue_compilation_2.f90:166:5
    |
166 |     real*16 :: unsupported_kind
    |     ^^^^^^^ 

semantic error: Argument was not specified
   --> tests/errors/continue_compilation_2.f90:391:33
    |
391 |     type(Circle) :: myCircle2 = Circle()
    |                                 ^^^^^^^^ Argument 'radius' not specified for circle

semantic error: Keyword argument not found
   --> tests/errors/continue_compilation_2.f90:394:33
    |
394 |     type(Circle) :: myCircle3 = Circle(mykeyword=10)
    |                                 ^^^^^^^^^^^^^^^^^^^^ 'mykeyword' keyword argument not found

semantic error: Unexpected args, SetExponent expects (real, int) as arguments
  --> tests/errors/continue_compilation_2.f90:33:18
   |
33 |         print *, set_exponent([1, 2, 3], 2)
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Cannot assign to an intent(in) variable `y`
  --> tests/errors/continue_compilation_2.f90:38:9
   |
38 |         y = 99  
   |         ^ 

semantic error: shape argument specified in c_f_pointer even though fptr is not an array.
   --> tests/errors/continue_compilation_2.f90:194:38
    |
194 |     call c_f_pointer(queries_1, y_1, [2])
    |                                      ^^^ 

semantic error: shape array passed to c_f_pointer must be of rank 1 but given rank is 2
   --> tests/errors/continue_compilation_2.f90:196:38
    |
196 |     call c_f_pointer(queries_2, y_2, shape)
    |                                      ^^^^^ 

semantic error: Cannot assign to a constant variable
   --> tests/errors/continue_compilation_2.f90:198:5
    |
198 |     x = 1
    |     ^^^^^ assignment here
    |
 84 |     integer, parameter :: x = 2
    |                           ~~~~~ declared as constant

semantic error: More actual than formal arguments in procedure call
   --> tests/errors/continue_compilation_2.f90:201:33
    |
201 |     call myCircle%calculateArea(circleArea, 12)
    |                                 ^^^^^^^^^^^^^^ 

semantic error: Invalid argument `end` supplied
   --> tests/errors/continue_compilation_2.f90:203:5
    |
203 |     CLOSE(end=200)
    |     ^^^^^^^^^^^^^^ 

semantic error: The first argument of `cmplx` intrinsic must be present
   --> tests/errors/continue_compilation_2.f90:205:9
    |
205 |     a = cmplx(y = 2)
    |         ^^^^^^^^^^^^ 

semantic error: Coarrays are not supported yet
   --> tests/errors/continue_compilation_2.f90:211:11
    |
211 |     val = this_image ()
    |           ^^^^^^^^^^^^^ 

semantic error: Coarrays are not supported yet
   --> tests/errors/continue_compilation_2.f90:212:5
    |
212 |     call co_sum (val, result_image=1)
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Coarrays are not supported yet
   --> tests/errors/continue_compilation_2.f90:213:9
    |
213 |     if (this_image() == 1) then
    |         ^^^^^^^^^^^^ 

semantic error: Coarrays are not supported yet
   --> tests/errors/continue_compilation_2.f90:217:5
    |
217 |     call event_query(1, 1, 1)
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Operands of comparison operator are of different types
   --> tests/errors/continue_compilation_2.f90:221:9
    |
221 |     if (i > x_2) then
    |         ^^^^^^^ 

semantic error: dim has already been specified as a positional/keyword argument to size
   --> tests/errors/continue_compilation_2.f90:225:14
    |
225 |     size_a = size(a_2, 1, dim=1)
    |              ^^^^^^^^^^^^^^^^^^^ 

semantic error: dim has already been specified as a positional/keyword argument to size
   --> tests/errors/continue_compilation_2.f90:226:14
    |
226 |     size_a = size(a_2, dim = 1, 1)
    |              ^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Only Integer literals or expressions which reduce to constant Integer are accepted as kind parameters.
   --> tests/errors/continue_compilation_2.f90:228:31
    |
228 |     size_a_2 = size(a_3, kind=kindvar, dim=1)
    |                               ^^^^^^^ 

semantic error: Only Integer literals or expressions which reduce to constant Integer are accepted as kind parameters.
   --> tests/errors/continue_compilation_2.f90:229:31
    |
229 |     size_a_2 = size(a_3, kind=kindvar)
    |                               ^^^^^^^ 

semantic error: Atomic operations are not supported yet
   --> tests/errors/continue_compilation_2.f90:231:5
    |
231 |     call atomic_add (atom[1], this_image())
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Atomic operations are not supported yet
   --> tests/errors/continue_compilation_2.f90:232:5
    |
232 |     call atomic_add (atom[2], this_image())
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Type-spec cannot contain an asterisk for a type parameter
   --> tests/errors/continue_compilation_2.f90:234:14
    |
234 |     print *, [character(*) :: "a", "b", "ball", "cat"]
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Different `character` lengths 1 and 4 in array constructor
   --> tests/errors/continue_compilation_2.f90:236:25
    |
236 |     print *, ["a", "b", "ball", "cat"]
    |                         ^^^^^^ 

semantic error: Different `character` lengths 2 and 5 in array constructor
   --> tests/errors/continue_compilation_2.f90:237:27
    |
237 |     print *, ["a1", "b1", "ball1", "cat1"]
    |                           ^^^^^^^ 

semantic error: Element in `real(8)` array constructor is `real(4)`
   --> tests/errors/continue_compilation_2.f90:240:20
    |
240 |     print *, [x_3, [1., 2.]]
    |                    ^^^^^^^^ 

semantic error: Element in `integer(4)` array constructor is `real(4)`
   --> tests/errors/continue_compilation_2.f90:242:18
    |
242 |     print *, [1, 2.]
    |                  ^^ 

semantic error: Element in `integer(4)` array constructor is `real(4)`
   --> tests/errors/continue_compilation_2.f90:244:18
    |
244 |     print *, [1, [1., 2.]]
    |                  ^^^^^^^^ 

semantic error: Argument of intrinsic must be an integer
   --> tests/errors/continue_compilation_2.f90:246:14
    |
246 |     print *, dfloat(y_3)
    |              ^^^^^^^^^^^ 

semantic error: Invalid argument type for `dim` or `mask`
   --> tests/errors/continue_compilation_2.f90:248:29
    |
248 |     print *, sum([1, 2, 3], 1.1)
    |                             ^^^ 

semantic error: `mask` argument to `Sum` must be a scalar or array of logical type
   --> tests/errors/continue_compilation_2.f90:250:32
    |
250 |     print *, sum([1, 2, 3], 1, 1.1)
    |                                ^^^ 

semantic error: `dim` argument to `Sum` must be a scalar and of integer type
   --> tests/errors/continue_compilation_2.f90:252:37
    |
252 |     print *, sum([1, 2, 3], .true., 1.1)
    |                                     ^^^ 

semantic error: Too many arguments to call `dint`
   --> tests/errors/continue_compilation_2.f90:254:13
    |
254 |     print*, dint(1.0_8, 8)
    |             ^^^^^^^^^^^^^^ 

semantic error: Too many arguments to call `dint`
   --> tests/errors/continue_compilation_2.f90:255:13
    |
255 |     if (abs(dint(1.0_8, 8) - 1.0_8) > 10e-5 ) error stop
    |             ^^^^^^^^^^^^^^ 

semantic error: Argument 1 of dlgama must be of double precision real type
   --> tests/errors/continue_compilation_2.f90:257:14
    |
257 |     print *, dlgama(2.7)
    |              ^^^^^^^^^^^ 

semantic error: Too many arguments to call `dnint`
   --> tests/errors/continue_compilation_2.f90:259:13
    |
259 |     print*, dnint(1.0_8, 8)
    |             ^^^^^^^^^^^^^^^ 

semantic error: Too many arguments to call `dnint`
   --> tests/errors/continue_compilation_2.f90:260:13
    |
260 |     if (abs(dnint(1.0_8, 8) - 1.0_8) > 10e-5 ) error stop
    |             ^^^^^^^^^^^^^^^ 

semantic error: Do concurrent loop variable `j` cannot be part of local expression
   --> tests/errors/continue_compilation_2.f90:262:30
    |
262 |     do concurrent (j = 1:Ny) local(i_1, j)
    |                              ^^^^^^^^^^^^^ 

semantic error: Assignment to loop variable `i_2` is not allowed
   --> tests/errors/continue_compilation_2.f90:269:9
    |
269 |         i_2 = j_1 + 1
    |         ^^^ 

semantic error: Step expression (Increment) in DO loop cannot be zero
   --> tests/errors/continue_compilation_2.f90:275:20
    |
275 |     do i_2 = 1, 5, 0
    |                    ^ 

semantic error: Arguments to dprod must be real(4)
   --> tests/errors/continue_compilation_2.f90:279:13
    |
279 |     print*, dprod(4.23_8, 4.3_8)
    |             ^^^^^^^^^^^^^^^^^^^^ 

semantic error: Unexpected args, Dreal expects (complex64) as arguments
   --> tests/errors/continue_compilation_2.f90:282:14
    |
282 |     print *, dreal(a_4)
    |              ^^^^^^^^^^ 

semantic error: Incorrect number of arguments passed to the 'complex' intrinsic. It accepts exactly 2 arguments.
   --> tests/errors/continue_compilation_2.f90:284:11
    |
284 |     a_5 = complex(1)
    |           ^^^^^^^^^^ 

semantic error: Argument of intrinsic must be an integer
   --> tests/errors/continue_compilation_2.f90:286:14
    |
286 |     print *, float(y_4)
    |              ^^^^^^^^^^ 

semantic error: Invalid argument `start` supplied
   --> tests/errors/continue_compilation_2.f90:288:5
    |
288 |     FLUSH(unit=10, start=100)
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Type mismatch in argument at argument (1); passed `real` to `integer`.
   --> tests/errors/continue_compilation_2.f90:290:16
    |
290 |     print *, f(42.9)
    |                ^^^^ 

semantic error: Argument to Ichar must have length one
   --> tests/errors/continue_compilation_2.f90:292:13
    |
292 |     print*, ichar("okay")
    |             ^^^^^^^^^^^^^ 

semantic error: first argument of `idint` must have kind equals to 8
   --> tests/errors/continue_compilation_2.f90:294:14
    |
294 |     print *, idint(4.5)
    |              ^^^^^^^^^^ 

semantic error: first argument of `ifix` must have kind equals to 4
   --> tests/errors/continue_compilation_2.f90:296:14
    |
296 |     print *, ifix(4.23_8)
    |              ^^^^^^^^^^^^ 

semantic error: Different shape for array assignment on dimension 1(1 and 3)
   --> tests/errors/continue_compilation_2.f90:299:5
    |
299 |     arr1 = [1, 2, 3]
    |     ^^^^^^^^^^^^^^^^ 

semantic error: Different shape for array assignment on dimension 3(1 and 2)
   --> tests/errors/continue_compilation_2.f90:303:5
    |
303 |     idaa2_y = idaa2_x
    |     ^^^^^^^^^^^^^^^^^ 

semantic error: Shapes for operands are not conformable
   --> tests/errors/continue_compilation_2.f90:305:14
    |
305 |     print *, idlalb1_x .neqv. [.true., .true.]
    |              ^^^^^^^^^        ^^^^^^^^^^^^^^^^ 

semantic error: Shapes for operands are not conformable
   --> tests/errors/continue_compilation_2.f90:307:14
    |
307 |     print *, idlalb2_x1 .neqv. idlalb2_x2
    |              ^^^^^^^^^^        ^^^^^^^^^^ 

semantic error: Incompatible ranks 2 and 1 in assignment
   --> tests/errors/continue_compilation_2.f90:309:5
    |
309 |     iraa1_arr1 = [1, 2, 3]
    |     ^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Incompatible ranks 1 and 3 in assignment
   --> tests/errors/continue_compilation_2.f90:311:5
    |
311 |     iraa2_arr3 = iraa2_arr1
    |     ^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: the first array argument to `where` must be of type logical
   --> tests/errors/continue_compilation_2.f90:313:11
    |
313 |     where([1, 2, 3, 4, 5]) iatw1_b = 1
    |           ^^^^^^^^^^^^^^^ 

semantic error: the first array argument to `where` must be of type logical
   --> tests/errors/continue_compilation_2.f90:318:11
    |
318 |     where(iatw2_i1) iatw2_b = 1
    |           ^^^^^^^^ 

semantic error: the argument to `where` must be an array
   --> tests/errors/continue_compilation_2.f90:322:11
    |
322 |     where(.true.) itw1_b = 12121
    |           ^^^^^^ 

semantic error: the argument to `where` must be an array
   --> tests/errors/continue_compilation_2.f90:325:11
    |
325 |     where(1) itw2_b = 12121
    |           ^ 

semantic error: the argument to `where` must be an array
   --> tests/errors/continue_compilation_2.f90:328:11
    |
328 |     where(max(1.33, 2.67)) itw3_b = 12121
    |           ^^^^^^^^^^^^^^^ 

semantic error: Unexpected args, Radix expects (int) or (real) as arguments
   --> tests/errors/continue_compilation_2.f90:334:14
    |
334 |     print *, radix((2.4, 1.0))
    |              ^^^^^^^^^^^^^^^^^ 

semantic error: datan2 was declared as a variable, it can't be called as a function
   --> tests/errors/continue_compilation_2.f90:338:14
    |
338 |     print *, datan2(x,y)
    |              ^^^^^^^^^^^ help: use the compiler option "--implicit-interface" to use intrinsic functions

semantic error: datan2 was declared as a variable, it can't be called as a function
   --> tests/errors/continue_compilation_2.f90:339:12
    |
339 |     if(abs(datan2(x,y) - 0.59941916594660438) > 1d-6) error stop
    |            ^^^^^^^^^^^ help: use the compiler option "--implicit-interface" to use intrinsic functions

semantic error: `pos` argument of `ibclr` intrinsic must be non-negative
   --> tests/errors/continue_compilation_2.f90:341:14
    |
341 |     print *, ibclr(1, -2)
    |              ^^^^^^^^^^^^ 

semantic error: Kind of all the arguments of Dshiftl must be the same
   --> tests/errors/continue_compilation_2.f90:343:14
    |
343 |     print *, dshiftl(1, 1_8, 1)
    |              ^^^^^^^^^^^^^^^^^^ 

semantic error: Kind of all the arguments of Ior must be the same
   --> tests/errors/continue_compilation_2.f90:345:14
    |
345 |     print *, ior(1, 1_8)
    |              ^^^^^^^^^^^ 

semantic error: Kind of all the arguments of Ieor must be the same
   --> tests/errors/continue_compilation_2.f90:347:14
    |
347 |     print *, ieor(1, 1_8)
    |              ^^^^^^^^^^^^ 

semantic error: Kind of all the arguments of Hypot must be the same
   --> tests/errors/continue_compilation_2.f90:349:14
    |
349 |     print *, hypot(1.0, 2.7_8)
    |              ^^^^^^^^^^^^^^^^^ 

semantic error: Kind of all the arguments of Ior must be the same
   --> tests/errors/continue_compilation_2.f90:351:14
    |
351 |     print *, ior(intr8_x, intr8_y)
    |              ^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Kind of all the arguments of Iand must be the same
   --> tests/errors/continue_compilation_2.f90:353:14
    |
353 |     print *, iand(intr9_x, intr9_y)
    |              ^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Kind of all the arguments of Ieor must be the same
   --> tests/errors/continue_compilation_2.f90:355:14
    |
355 |     print *, ieor(intr10_x, intr10_y)
    |              ^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Kind of all the arguments of Hypot must be the same
   --> tests/errors/continue_compilation_2.f90:357:14
    |
357 |     print *, hypot(intr11_x, intr11_y)
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: All arguments to max0 must be of the same type
   --> tests/errors/continue_compilation_2.f90:359:14
    |
359 |     print *, max(12, 13.94)
    |              ^^^^^^^^^^^^^^ 

semantic error: All arguments to min0 must be of the same type
   --> tests/errors/continue_compilation_2.f90:361:14
    |
361 |     print *, min(12, 13.94)
    |              ^^^^^^^^^^^^^^ 

semantic error: Unexpected args, Scale expects (real, int) as arguments
   --> tests/errors/continue_compilation_2.f90:363:14
    |
363 |     print *, scale([1, 2, 3], 2)
    |              ^^^^^^^^^^^^^^^^^^^ 

semantic error: Unexpected args, SetExponent expects (real, int) as arguments
   --> tests/errors/continue_compilation_2.f90:365:14
    |
365 |     print *, set_exponent([1, 2, 3], 2)
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Non-variable expression for `iostat`
   --> tests/errors/continue_compilation_2.f90:368:5
    |
368 |     read(ici_buffer, *, iostat=ici_ios)
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: `iostat` must be scalar
   --> tests/errors/continue_compilation_2.f90:371:5
    |
371 |     read(insv_buffer, *, iostat=insv_ios(1:1))
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: The SHIFT argument must be less than or equal to the of SIZE argument
   --> tests/errors/continue_compilation_2.f90:373:14
    |
373 |     print *, ishftc(10, 6, 4)
    |              ^^^^^^^^^^^^^^^^ 

semantic error: The first argument of `cmplx` intrinsic is of complex type, the second argument in this case must be absent
   --> tests/errors/continue_compilation_2.f90:375:14
    |
375 |     print *, cmplx(complex_z , 1)
    |              ^^^^^^^^^^^^^^^^^^^^ 

semantic error: `kind` argument of `aint` intrinsic must be a scalar
   --> tests/errors/continue_compilation_2.f90:377:36
    |
377 |     print *, aint([1.0, 2.0, 3.0], [4, 4])
    |                                    ^^^^^^ 

semantic error: Type mismatch in assignment, the types must be compatible
   --> tests/errors/continue_compilation_2.f90:379:5
    |
379 |     tm1_x = "x"
    |     ^^^^^   ^^^ type mismatch (integer and string)

semantic error: Type mismatch in binary operator, the types must be compatible
   --> tests/errors/continue_compilation_2.f90:381:13
    |
381 |     tm2_x = 5 + "x"
    |             ^   ^^^ type mismatch (integer and string)

semantic error: Type mismatch in assignment, the types must be compatible
   --> tests/errors/continue_compilation_2.f90:381:5
    |
381 |     tm2_x = 5 + "x"
    |     ^^^^^       ^^^ type mismatch (integer and string)

semantic error: Variable 'foo' is not declared
   --> tests/errors/continue_compilation_2.f90:382:13
    |
382 |     print *,foo
    |             ^^^ 'foo' is undeclared

semantic error: Variable 'mycircle' doesn't have any member named, 'mymember'.
   --> tests/errors/continue_compilation_2.f90:388:14
    |
388 |     print *, myCircle%mymember
    |              ^^^^^^^^^^^^^^^^^ 
